project 6-small task added, icon visibility fixed on resume page

--- a/basic portfolio/design.css
+++ b/basic portfolio/design.css
@@ -332,6 +332,15 @@ nav {
     height: 100vh;
     background: #4f6d7a;
 }
+.getyoufile a{
+    position: relative;
+    top: 50px;
+    right: 10px;
+    display: flex;
+    justify-content: flex-end;
+    text-decoration: none;
+    color: #21BF73;
+}
 
 /* ================= Skill-set page ================== */
 
@@ -552,6 +561,8 @@ section {
     justify-content: space-around;
     width: 100vw;
     background: #f9f9f9; /*#D7E9F7*/
+    background-color: #D9AFD9;
+    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     font-family: 'Poppins', sans-serif;
     flex-wrap: wrap;
     padding: 20px 30px;
@@ -822,4 +833,106 @@ section {
 .prev-btn:hover,
 .next-btn:hover {
     color: rgb(93, 199, 150);
+}
+
+/* ============= project5 ================== */
+.project-container-5-6 {
+    display: grid;
+    width: 440px;
+    height: 295px;
+    position: relative;
+    place-items: center;
+    border-radius: 12px;
+    background: linear-gradient(320deg, #2a5a3b, #1e4886);
+    overflow: hidden;
+    margin: 30px;
+}
+
+.project-container-5-6::before {
+    content: "";
+    position: absolute;
+    width: 550px;
+    height: 35px;
+    top: 0;
+    right: 58px;
+    transition: 1.9s;
+    background: linear-gradient(50deg, #00ff59, #02b3ff);
+    transform: rotate(-45deg) translate(0, -100px);
+
+}
+
+.project-container-5-6:hover::before {
+    animation: effect;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes effect {
+    100% {
+        transform: rotate(-45deg) translate(0, 550px);
+    }
+}
+.project-card-5 {
+    /* display: flex; */
+    place-items: center;
+    width: 432px;
+    height: 288px;
+    background: #fff;
+    border-radius: 12px;
+    z-index: 1;
+    color: #858585;
+    overflow: hidden;
+    padding: 5px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s ease;
+    object-fit: cover;
+}
+
+.project-card-5:hover {
+    color: #222;
+}
+
+/* ============= project6 ================== */
+.project-card-6 {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* place-items: center; */
+    width: 432px;
+    height: 288px;
+    z-index: 1;
+    background: #fff;
+
+    /* background-color: #D9AFD9; */
+    /* background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%); */
+    border-radius: 12px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.project-card-6:hover {
+    color: #222;
+    
+}
+.project-title {
+    font-family: "Font Awesome 5 Free";
+    font-size: 25px;
+    color: blueviolet;
+    /* margin: 40px auto; */
+
+}
+.project-title:hover {
+    color: orangered;
+}
+.Textanimate{
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: grey;
+}
+.Textanimate:hover{
+    color: #222;
 }
